--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#343a40">
     <title>Weather App</title>
-    <!-- helps with pwa -->
+    <!-- Web App Manifest -->
     <link rel="manifest" href="/manifest.json">
+    <!-- iOS support -->
     <link rel="apple-touch-icon" href="icons/icon-192x192.png">
     <meta name="apple-mobile-web-app-status-bar" content="#343a40">
     <!-- Bootstrap stylesheet CDN -->
@@ -30,6 +31,11 @@
         </div>
     </div>
 
+    <!-- Offline message -->
+    <div id="offline-message" class="alert alert-warning d-none" role="alert">
+        You are currently offline. Showing cached weather data.
+    </div>
+
     <!-- Bootstrap CDN -->
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
@@ -38,6 +44,25 @@
     </script>
 
     <script>
+        // Register Service Worker
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js')
+                    .then((reg) => console.log('Service Worker registered'))
+                    .catch((err) => console.log('Service Worker registration failed:', err));
+            });
+        }
+
+        // Check online status
+        window.addEventListener('online', function(e) {
+            document.getElementById('offline-message').classList.add('d-none');
+            fetchWeather();
+        });
+
+        window.addEventListener('offline', function(e) {
+            document.getElementById('offline-message').classList.remove('d-none');
+        });
+
         async function fetchWeather() {
             const weatherInfo = document.getElementById('currentWeather')
             // api call
@@ -88,7 +113,3 @@
     </script>
 </body>
 </html>
-<!-- 
-I used AI (chatGpt) to help debug the api call not properaly getting the data from the call.
-I ended up having words mispelled and accessing the wrong layer of the json response
--->
