--- a/index.html
+++ b/index.html
@@ -5,28 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#343a40">
     <title>Weather App</title>
+
     <!-- Web App Manifest -->
     <link rel="manifest" href="manifest.json">
+
     <!-- Bootstrap stylesheet CDN -->
     <link 
-        href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css" 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
         rel="stylesheet"
-    > 
+    >
     <!-- bootstrap Icons Cdn -->
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" 
         rel="stylesheet"
     >   
 </head>
+<body class="bg-secondary">
 
-<body class="bg-dark">
+    <!-- div holds the location data -->
+    <div class="container vh-50 w-50 d-flex justify-content-center align-items-start">
+        <div class="card-body mt-5 rounded-5 bg-light text-center" id="locationData">
+            <h1 class="text-dark">Current Location</h1>
+            <h3 class="text-dark"><i class="bi bi-geo-alt-fill"></i> Cookville</h3>
+        </div>
+    </div>
+    
+
     <!-- div that holds the weather data -->
-    <div class="container">
-        <div class="card-body flex-fill bg-dark d-flex flex-column vh-100 vw-50">
-            <div id="currentWeather" class="card-body text-left text-light bg-dark">
+    <div class="container vh-50 w-50 d-flex justify-content-center align-items-start">
+        <div class="card-body mt-3 rounded-5 bg-light text-center">
+            <div class="card-body mt-3 rounded-5 bg-light text-dark text-center" id="currentWeather" >
+
             </div>
         </div>
     </div>
+
     <!-- Bootstrap CDN -->
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
@@ -34,11 +47,13 @@
         crossorigin="anonymous">
     </script>
 
+    <!-- script for logic for weather data -->
     <script>
         async function fetchWeather() {
             const weatherInfo = document.getElementById('currentWeather')
+            
             // api call
-            const apiUrl = 'https://api.open-meteo.com/v1/forecast?latitude=36.1628&longitude=-85.5016&current=temperature_2m,relative_humidity_2m,apparent_temperature,precipitation,rain,cloud_cover&temperature_unit=fahrenheit&wind_speed_unit=mph&precipitation_unit=inch'
+            const apiUrl = 'https://api.open-meteo.com/v1/forecast?latitude=36.1628&longitude=-85.5016&current=temperature_2m,is_day,precipitation,rain,showers,snowfall,cloud_cover&hourly=temperature_2m,precipitation_probability,precipitation&temperature_unit=fahrenheit&wind_speed_unit=mph&precipitation_unit=inch'
 
             try {
                 const objResponse = await fetch(apiUrl)
@@ -47,29 +62,61 @@
                 if (objData && objData.current) {
                     const temperature = objData.current.temperature_2m
                     const rainTotal = objData.current.precipitation
+                    const rainPropability = objData.hourly.precipitation_probability[167] // [167] takes most recent hour %
                     const cloudCoverage = objData.current.cloud_cover
+                    console.log(rainPropability)
+
+                    let tempLogo
+                    if (tempLogo <= 30) { // really cold
+                        tempLogo = 'bi bi-thermometer' 
+                    } else if (cloudCoverage <= 60) { // cold
+                        tempLogo = 'bi bi-thermometer-low' 
+                    } else if (cloudCoverage <= 85) {  // warm
+                        tempLogo = 'bi bi-thermometer-half'
+                    } else {  // hot
+                        tempLogo = 'bi bi-thermometer-high'
+                    }
+                    // icons for responsive cloud icons
+                    let cloudLogo
+                    if (cloudCoverage <= 20) { // Clear sky
+                        cloudLogo = 'bi bi-sun' 
+                    } else if (cloudCoverage <= 40) { // Partly cloudy
+                        cloudLogo = 'bi bi-cloud-sun' 
+                    } else if (cloudCoverage <= 70) {  // Mostly cloudy
+                        cloudLogo = 'bi bi-cloud-sun-fill'
+                    } else {  // Overcast
+                        cloudLogo = 'bi-cloud'
+                    }
+
+                    // icons for response rain icons
+                    let rainLogo
+                    if (rainTotal === 0) { // No rain
+                        rainLogo = 'bi bi-sun' 
+                    } else if (rainTotal < 0.2) { // Light drizzle
+                        rainLogo = 'bi bi-cloud-drizzle' 
+                    } else if (rainTotal < 0.4) { // Moderate rain
+                        rainLogo = 'bi-cloud-rain' 
+                    } else { // Heavy rain
+                        rainLogo = 'bi-cloud-rain-heavy' 
+                    }
 
                     // html to display the weather conditions 
                     weatherInfo.innerHTML = 
                     `
-                        <h1 class="text-left mb-4 text-light">Current Weather</h1>
+                        <h1 class="text-center mb-4 text-dark">Current Weather</h1>
                         <div class="d-flex flex-column mb-3">
-                            <div class="mb-3">
-                                <h3 class="text-light"><i class="bi bi-thermometer-half "></i> Temperature</h3>
+                            <div class="mb-3 d-flex align-items-center">
+                                <h3 class="text-dark mx-4"><i class="${tempLogo}"></i> Temperature</h3>
                                 <p class="mb-2">${temperature}°F</p>
                             </div>
-                            <div class="mb-3">
-                                <h3 class="text-light"><i class="bi bi-cloud-rain "></i> Rain Amount</h3>
-                                <p class="mb-2">${rainTotal} inches</p>
+                            <div class="mb-3 d-flex align-items-center">
+                                <h3 class="text-dark mx-4"><i class="${rainLogo}"></i> Rain</h3>
+                                <p class="mb-2">${rainTotal}″</p>
+                                <p class="mb-2 ms-3">${rainPropability}% chance </p>
                             </div>
-                            <div class="mb-3">
-                                <h3 class="text-light"><i class="bi bi-clouds"></i> Cloud Coverage</h3>
+                            <div class="mb-3 d-flex align-items-center">
+                                <h3 class="text-dark mx-4"><i class="${cloudLogo}"></i> Cloud Coverage</h3>
                                 <p class="mb-2">${cloudCoverage}%</p>
-                            </div>
-
-                            <h1 class="text-light">Current Location</h1>
-                            <div>
-                                <h3 class="text-light"><i class="bi bi-geo-alt-fill"></i>Cookville</h3>
                             </div>
                         </div>
                     `
