--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     data.address.house ||
                     data.address.building || 
                     data.address.locality ||
-                    'Location Unknown'
+                    'Your mom'
 
         } catch (error) {
             console.error("Error fetching city name:", error)
