--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         // names it cityName that way it can be used in 
         const cityName = await fetchCityName(latitude, longitude)
 
-        // const apiUrl = `https://api.open-meteo.com/v1/forecast?latitude=${latitude}&longitude=${longitude}&current=is_day,temperature_2m,cloud_cover,relative_humidity_2m,is_day,precipitation,rain,showers,snowfall,cloud_cover&hourly=temperature_2m,relative_humidity_2m,precipitation_probability,precipitation&daily=temperature_2m_max,temperature_2m_min,sunrise,sunset,precipitation_probability_max,weathercode&temperature_unit=fahrenheit&wind_speed_unit=mph&precipitation_unit=inch&timezone=auto&forecast_days=7`
-        const apiUrl = `https://api.open-meteo.com/v1/forecast?latitude=35&longitude=-85&current=is_day,temperature_2m,cloud_cover,relative_humidity_2m,is_day,precipitation,rain,showers,snowfall,cloud_cover&hourly=temperature_2m,relative_humidity_2m,precipitation_probability,precipitation&daily=temperature_2m_max,sunrise,sunset,temperature_2m_min,precipitation_probability_max,weathercode&temperature_unit=fahrenheit&wind_speed_unit=mph&precipitation_unit=inch&timezone=auto&forecast_days=7`
+        const apiUrl = `https://api.open-meteo.com/v1/forecast?latitude=${latitude}&longitude=${longitude}&current=is_day,temperature_2m,cloud_cover,relative_humidity_2m,is_day,precipitation,rain,showers,snowfall,cloud_cover&hourly=temperature_2m,relative_humidity_2m,precipitation_probability,precipitation&daily=temperature_2m_max,temperature_2m_min,sunrise,sunset,precipitation_probability_max,weathercode&temperature_unit=fahrenheit&wind_speed_unit=mph&precipitation_unit=inch&timezone=auto&forecast_days=7`
+        // const apiUrl = `https://api.open-meteo.com/v1/forecast?latitude=35&longitude=-85&current=is_day,temperature_2m,cloud_cover,relative_humidity_2m,is_day,precipitation,rain,showers,snowfall,cloud_cover&hourly=temperature_2m,relative_humidity_2m,precipitation_probability,precipitation&daily=temperature_2m_max,sunrise,sunset,temperature_2m_min,precipitation_probability_max,weathercode&temperature_unit=fahrenheit&wind_speed_unit=mph&precipitation_unit=inch&timezone=auto&forecast_days=7`
 
         try {
             const objResponse = await fetch(apiUrl)
@@ -289,7 +289,7 @@
         let backgroundImage
 
         if (cloudCover < 35 && isDay == 1) { // Mostly clear sky daytime
-            backgroundImage = "icon/sunnyDay.jpeg"  
+            backgroundImage = "icons/sunnyDay.jpeg"  
         } else if (cloudCover < 65 && isDay == 1) { // Partly cloudy daytime
             backgroundImage = "icons/cloudyDay.jpeg" 
         } else if(cloudCover >= 65 && isDay == 1){ // overcast daytime
